<?xml version="1.0" encoding="utf-8"?>
    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/deviceCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
       >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/deviceName"
                android:text="@string/card_label_device_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />
            <TextView
                android:id="@+id/deviceRSSI"
                android:text="@string/card_label_device_RSSI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/deviceName"
                app:layout_constraintStart_toStartOf="@id/deviceName"
                />

            <TextView
                android:id="@+id/deviceConnectable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/card_label_device_connectable"
                app:layout_constraintTop_toBottomOf="@id/deviceRSSI"
                app:layout_constraintStart_toStartOf="@id/deviceRSSI" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>